BNF.txt

<termBody>
 := <lambdaAbst>
  | <typeAbst>
  | <generalApp>

<lambdaAbst>
 := "\" <var> <typeAnnotation>opt <termBody>

<typeAnnotation>
 := <typeUnit>
  | <typeUnit> "->" <typeAnnotation>

<typeUnit>
 := "Bool"
  | <tyVar>
  | "(" <tyAnnot> ")"

<termIf>
 := "if" <termBody> "then" <termBody> "else" <termBody>

<typeAbst>
 := "\" <tyVar> <termBody>

<generalApp>
 := <unit> <appChain>

<appChain>
 := "[" <tyAnnot> "]" <appChain>
  | <unit> <appChain>
  | EOL

<unit>
 := <termIf>
  | "true"
  | "false"
  | <var>
  | "(" <termBody> ")"

<var>
 := lower char

<tyVar>
 := upper char
